--- a/Master-Zhao/Master-Zhao.Shell/StartMenu/Win98/Windows98.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/StartMenu/Win98/Windows98.xaml
@@ -17,6 +17,54 @@
         <SolidColorBrush x:Key="MenuSelect" Color="#000080"/>
         <!--application background 128 128 128-->
         <SolidColorBrush x:Key="ApplicationBackground" Color="#808080"/>
+
+        <Geometry x:Key="Checkmark">F1 M 10.0,1.2 L 4.7,9.1 L 4.5,9.1 L 0,5.2 L 1.3,3.5 L 4.3,6.1L 8.3,0 L 10.0,1.2 Z</Geometry>
+        <SolidColorBrush x:Key="Menu.Static.Foreground" Color="#FF212121"/>
+
+        <Style TargetType="{x:Type MenuItem}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border x:Name="templateRoot" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                            <Grid VerticalAlignment="Center">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <ContentPresenter x:Name="Icon" ContentSource="Icon" HorizontalAlignment="Center" Height="16" Margin="3" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="Center" Width="16"/>
+                                <Path x:Name="GlyphPanel" Data="{StaticResource Checkmark}" FlowDirection="LeftToRight" Fill="{StaticResource Menu.Static.Foreground}" Margin="3" VerticalAlignment="Center" Visibility="Collapsed"/>
+                                <ContentPresenter ContentSource="Header" Grid.Column="1" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="Icon" Value="{x:Null}">
+                                <Setter Property="Visibility" TargetName="Icon" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="true">
+                                <Setter Property="Visibility" TargetName="GlyphPanel" Value="Visible"/>
+                                <Setter Property="Visibility" TargetName="Icon" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="True">
+                                <Setter Property="Background" TargetName="templateRoot" Value="{StaticResource MenuSelect}"/>
+                                <Setter Property="BorderBrush" TargetName="templateRoot" Value="{StaticResource ApplicationBackground}"/>
+                            </Trigger>
+                            <!--<Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" TargetName="templateRoot" Value="{StaticResource Menu.Disabled.Foreground}"/>
+                                <Setter Property="Fill" TargetName="GlyphPanel" Value="{StaticResource Menu.Disabled.Foreground}"/>
+                            </Trigger>-->
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsHighlighted" Value="True"/>
+                                    <Condition Property="IsEnabled" Value="False"/>
+                                </MultiTrigger.Conditions>
+                                <!--<Setter Property="Background" TargetName="templateRoot" Value="{StaticResource MenuItem.Highlight.Disabled.Background}"/>
+                                <Setter Property="BorderBrush" TargetName="templateRoot" Value="{StaticResource MenuItem.Highlight.Disabled.Border}"/>-->
+                            </MultiTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </start:StartMenuWindowBase.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -33,7 +81,7 @@
                 </LinearGradientBrush>
             </Grid.Background>
 
-            <Label VerticalAlignment="Bottom" VerticalContentAlignment="Center" Foreground="White" Content="Windows 98" Height="40" FontSize="25" Margin="-5,0,-124,0">
+            <Label VerticalAlignment="Bottom" VerticalContentAlignment="Center" Foreground="White" Content="Windows 98" Height="40" FontSize="25" Margin="-6,0,-124,-42">
                 <Label.RenderTransform>
                     <RotateTransform Angle="-90" />
                 </Label.RenderTransform>
@@ -43,7 +91,7 @@
 
         <Grid Grid.Column="1" Name="grid_menu">
             <Menu Name="menu" Background="{DynamicResource ActiveBorder}">
-              
+
             </Menu>
         </Grid>
     </Grid>
