basic windows 98 start menu

--- a/Master-Zhao/Master-Zhao.Shell/StartMenu/Win98/Windows98.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/StartMenu/Win98/Windows98.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:start="clr-namespace:Master_Zhao.Shell.StartMenu"
         mc:Ignorable="d"
-        Title="Win98" Height="auto" Width="260" BorderThickness="3" BorderBrush="{DynamicResource ActiveBorder}" Loaded="StartMenuWindowBase_Loaded">
+        Title="Win98" Width="260" SizeToContent="Height" MaxWidth="185" BorderThickness="3" BorderBrush="{DynamicResource ActiveBorder}">
     <start:StartMenuWindowBase.Resources>
         <!--semi blue :16 132 208-->
         <SolidColorBrush x:Key="SemiBlue" Color="#1084d0"/>
@@ -66,6 +66,7 @@
             </Setter>
         </Style>
     </start:StartMenuWindowBase.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -91,7 +92,7 @@
 
         <Grid Grid.Column="1" Name="grid_menu">
             <Menu Name="menu" Background="{DynamicResource ActiveBorder}">
-
+                
             </Menu>
         </Grid>
     </Grid>
