test menu style

--- a/Master-Zhao/Master-Zhao.Shell.Test/App.xaml
+++ b/Master-Zhao/Master-Zhao.Shell.Test/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Master_Zhao.Shell.Test"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/MenuStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
