--- a/Master-Zhao/Master-Zhao.Shell/View/Pages/DesktopBeautify.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Pages/DesktopBeautify.xaml
@@ -28,6 +28,7 @@
                 <ToggleButton Content="静态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StaticWallpaperClick" IsChecked="True"/>
                 <ToggleButton Content="动态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_DynamicWallpaperClick"/>
                 <ToggleButton Content="鼠标特效" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_MouseEffectClick"/>
+                <ToggleButton Content="自定义开始菜单" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StartMenuSettingClick"/>
                 <ToggleButton Content="任务栏设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_TaskbarSettingClick"/>
                 <ToggleButton Content="右键菜单设置(开发中)" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_ContextMenuSettingClick" Visibility="Collapsed"/>
                 <ToggleButton Content="开机图像更改(开发中)" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_BootImageSettingClick" Visibility="Collapsed"/>
