--- a/Master-Zhao/Master-Zhao.Shell/View/Pages/StartMenuSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Pages/StartMenuSetting.xaml
@@ -11,7 +11,8 @@
 
     <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
         <WrapPanel Name="wrap">
-            <user:StartMenuControl Width="200" Height="300" MenuThumbnail="../../Icon/about_back.jpeg"/>
+            <user:StartMenuControl Width="200" Height="300" MenuThumbnail="../../Icon/about_back.jpeg" Margin="10" x:Name="menu_default" OnSet="OnSetStartMenu" OnSelect="OnSelectStartMenu" MenuName="系统"/>
+            <user:StartMenuControl Width="200" Height="300" MenuThumbnail="../../Icon/StartMenu/startmenu_98.png" Margin="10" x:Name="menu_98" OnSet="OnSetStartMenu" OnSelect="OnSelectStartMenu" MenuName="Windows 98"/>
         </WrapPanel>
     </ScrollViewer>
 </Page>
