update folder structure

--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/DesktopBeautify.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/DesktopBeautify.xaml
@@ -37,7 +37,7 @@
         </Grid>
 
         <Grid Grid.Column="1">
-            <Frame Name="frame" Source="StaticWallpaper.xaml">
+            <Frame Name="frame" Source="./Pages/StaticWallpaper.xaml">
                 
             </Frame>
         </Grid>
