--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/ToolsPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/ToolsPage.xaml
@@ -26,6 +26,7 @@
 
             <StackPanel Grid.Row="1">
                 <ToggleButton Content="快速启动菜单" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_FastRunClick" IsChecked="True"/>
+                <ToggleButton Content="老板键" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_BossKeyClick"/>
             </StackPanel>
         </Grid>
 
