--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKey.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKey.xaml
@@ -5,13 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Master_Zhao.Shell.View.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Title="BossKey">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
@@ -24,17 +25,43 @@
             <CheckBox Content="启用老板键" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}"/>
         </Grid>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Margin="0,0,20,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <CheckBox Content="切换到当前执行的程序" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_Running" Checked="cbx_Running_Checked"/>
+            <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
 
-            <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,10,0,0" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}">
-                <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_Tasks">
+            <CheckBox Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_Running" Checked="cbx_Running_Checked"/>
+
+            <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
+                <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning">
                     
+                </ListBox>
+            </GroupBox>
+        </Grid>
+
+        <Grid Grid.Row="3" Margin="0,0,20,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
+
+            <CheckBox Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_Kill" Checked="cbx_Kill_Checked"/>
+
+            <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
+                <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <CheckBox Style="{StaticResource CheckBoxStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3"></CheckBox>
+                                <Label HorizontalAlignment="Left" Margin="20,3,3,3" Content="{Binding}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
             </GroupBox>
         </Grid>
